# fresh-guacamole

./: .gitignore  README.md  package-lock.json  package.json
client/: package.json
client/components/Button/: index.tsx
client/components/Input/: index.tsx
client/components/domain/Contract/: index.tsx
client/components/domain/Wallet/: WalletDetails.tsx  index.tsx
client/constants/: program.ts
client/contexts/: connectionManager.tsx  contractManager.tsx  transactionManager.tsx  walletManager.tsx
client/pages/: _app.tsx  index.tsx
client/utils/: cancelTransaction.ts  confirmTransaction.ts  createData.ts  createMultiSigWallet.ts  createNewConnection.ts  createOrRestoreWalletWithoutBalance.ts  createTransaction.ts  encodeInstructionData.ts  executeTransaction.ts  generateWalletWithoutBalance.ts  getWalletBalance.ts  instructionsVariants.ts  payload.ts  rejectTransaction.ts  requestAirdrop.ts  restoreMultiSigWallet.ts  setOwners.ts  transactionVariant.ts
contract/: Cargo.toml
contract/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
