[package]
name = "fresh_guacamole"
version = "1.0.0"
edition = "2021"
license = "BSD-3-Clause"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"
thiserror = "1.0.31"

[dev-dependencies]
solana-sdk = "=1.7.9"

[lib]
name = "fresh_guacamole"
crate-type = ["cdylib", "lib"]